test-cases/valid/reject/lessthan_bad_operand_type.ul
void main() {
    print foo() < bar(); // Can't compare void types
}

void foo() {

}

void bar() {

}
